# CPP-Semestral

./: .clang-format  .clang-format.bak  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  TECHNICAL.md  cli-args.md  flake.nix  project.md
scripts/: generate-addresses.sh  generate-p2pkh-address.sh  generate-transactions.sh  get-block-template.sh  start-node.sh
src/: Benchmark.hpp  BlockHeader.cpp  BlockHeader.hpp  Endian.hpp  Logger.cpp  Logger.hpp  Sha256.cpp  Sha256.hpp  main.cpp
src/core/: Args.cpp  Args.hpp  BlockHeader.cpp  BlockHeader.hpp  Endian.hpp  Hasher.hpp  MerkleTree.cpp  MerkleTree.hpp  Network.hpp  OpensslHasher.cpp  OpensslHasher.hpp  OwnHasher.cpp  OwnHasher.hpp  Sha256.cpp  Sha256.hpp  address.hpp  base58.hpp  utils.hpp
src/engine/: Conductor.cpp  Conductor.hpp  CpuEngine.cpp  CpuEngine.hpp  MiningEngine.hpp
src/hashers/: Hasher.hpp  OpensslHasher.cpp  OpensslHasher.hpp  OwnHasher.cpp  OwnHasher.hpp
src/mining/: BlockAssembly.cpp  BlockAssembly.hpp  MiningJob.hpp
src/networking/: MiningProtocol.hpp  RpcJsonClient.cpp  RpcJsonClient.hpp  StratumClient.hpp
tests/: addressTest.cpp  blockHeaderTest.cpp  cpuEngineTest.cpp  customHasherTest.cpp  endianTest.cpp  hashTest.cpp  hasherTest.cpp  merkleRootTest.cpp  mineBlockTest.cpp  rpcClientTest.cpp
